--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,9 @@ set(SOURCE_FILES
         src/main/Middlemarch/PreludeText.h
         src/main/Middlemarch/NovelTextComponent.h
         src/main/Middlemarch/NovelTextRenderSystem.cpp
-        src/main/Middlemarch/NovelTextRenderSystem.h)
+        src/main/Middlemarch/NovelTextRenderSystem.h
+        src/main/HighLevel/FontGlobals.h
+        src/main/HighLevel/TerminalGlobals.h)
 
 
 Message("")
