--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,8 @@ set(SOURCE_FILES
         src/main/Middlemarch/NovelTextRenderSystem.cpp
         src/main/Middlemarch/NovelTextRenderSystem.h
         src/main/HighLevel/FontGlobals.h
-        src/main/HighLevel/TerminalGlobals.h)
+        src/main/HighLevel/TerminalGlobals.h
+        src/main/Middlemarch/SubjectComponent.h)
 
 
 Message("")
