SubjectRenderSystem exists now, just need to add system to the ecs manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,9 @@ set(SOURCE_FILES
         src/main/Middlemarch/NovelTextRenderSystem.h
         src/main/HighLevel/FontGlobals.h
         src/main/HighLevel/TerminalGlobals.h
-        src/main/Middlemarch/SubjectComponent.h)
+        src/main/Middlemarch/SubjectComponent.h
+        src/main/Middlemarch/SubjectRenderSystem.cpp
+        src/main/Middlemarch/SubjectRenderSystem.h)
 
 
 Message("")
