Cleaned out some weird apostrophes --> trying to dos ome other stuff with styles and subject rendering too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,8 @@ set(SOURCE_FILES
         src/main/HighLevel/TerminalGlobals.h
         src/main/Middlemarch/SubjectComponent.h
         src/main/Middlemarch/SubjectRenderSystem.cpp
-        src/main/Middlemarch/SubjectRenderSystem.h)
+        src/main/Middlemarch/SubjectRenderSystem.h
+        src/main/Rendering/TextStyles.h)
 
 
 Message("")
