Created novel word component --> will be used by Abyz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,8 @@ set(SOURCE_FILES
         src/main/Middlemarch/SubjectRenderSystem.cpp
         src/main/Middlemarch/SubjectRenderSystem.h
         src/main/Rendering/TextStyles.h
-        src/main/Middlemarch/PunctuationMarks.h)
+        src/main/Middlemarch/PunctuationMarks.h
+        src/main/Middlemarch/NovelWordComponent.h)
 
 
 Message("")
