Setting up the events for the new Abyz pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,8 @@ set(SOURCE_FILES
         src/main/Middlemarch/SubjectRenderSystem.h
         src/main/Rendering/TextStyles.h
         src/main/Middlemarch/PunctuationMarks.h
-        src/main/Middlemarch/NovelWordComponent.h)
+        src/main/Middlemarch/NovelWordComponent.h
+        src/main/Middlemarch/EndOfReadingEvent.h)
 
 
 Message("")
