Setting up AbyzRunningSystem and now the PrioritizingSystem removes the relicness of the words

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,9 @@ set(SOURCE_FILES
         src/main/HighLevel/SystemAddSystem.h
         src/main/Abyz/AbyzPrioritizingSystem.cpp
         src/main/Abyz/AbyzPrioritizingSystem.h
-        src/main/Abyz/AbyzTargetComponent.h)
+        src/main/Abyz/AbyzTargetComponent.h
+        src/main/Abyz/AbyzRunningSystem.cpp
+        src/main/Abyz/AbyzRunningSystem.h)
 
 
 Message("")
