Collisions work much better now b/c I just check collisions at the end always, but the revert position stuff is still not great.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ set(SOURCE_FILES
         src/main/Gravity/JumpingComponent.h
         src/main/Gravity/JumpingSystem.cpp
         src/main/Gravity/JumpingSystem.h
+        src/main/ECSObjects/FinalSystem.h
 )
 
 
