Setting up target rendering system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,8 @@ set(SOURCE_FILES
         src/main/PositionsAndMovement/RightLeftMovementSystem.h
         src/main/PositionsAndMovement/RightLeftMovementComponent.h
         src/main/Platformer/TargetComponent.h
+        src/main/Platformer/TargetRenderingSystem.cpp
+        src/main/Platformer/TargetRenderingSystem.h
 )
 
 
