added platform component now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,7 @@ set(SOURCE_FILES
         src/main/Platformer/TargetRenderingSystem.cpp
         src/main/Platformer/TargetRenderingSystem.h
         src/main/Platformer/TextStepPrefab.h
+        src/main/Platformer/PlatformComponent.h
 )
 
 
