added life gate system, should make stuff easier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,9 @@ set(SOURCE_FILES
         src/main/Spawning/SpawnAbyzComponent.h
         src/main/Spawning/SpawnAbyzSystem.cpp
         src/main/Spawning/SpawnAbyzSystem.h
+        src/main/Abyz/LifeGateComponent.h
+        src/main/Abyz/LifeGateSystem.cpp
+        src/main/Abyz/LifeGateSystem.h
 )
 
 
