--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ set(SOURCE_FILES
         src/main/Emma/ReadEmma.cpp
         src/main/Emma/EmmaStart.cpp
         src/main/Emma/EmmaStart.h
+        src/main/Emma/EmmaWoodhouseComponent.h
 )
 
 
