Boxes are starting to get created, and I should be able to jump into them soon.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,7 @@ set(SOURCE_FILES
         src/main/Emma/EmmaWoodhouseSystem.cpp
         src/main/Emma/EmmaWoodhouseSystem.h
         src/main/Text/TextComponent.cpp
+        src/main/Emma/CoinBoxComponent.h
 )
 
 
